<resources>
    <string name="app_name">ThemeBrowser</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_theme">Themes</string>
    <string name="action_settings">Settings</string>
    <string name="loactionagree_title">Location Agreement</string>
    <string name="locationagree_text">Website wants to know your location</string>
    <string name="btn_ok">OK</string>
    <string name="btn_no">NO</string>
    <string name="filechooser">File Chooser</string>
    <string name="alert">alert</string>
    <string name="scrolltop">Want to scroll top?</string>
    <string name="copy">Copied</string>
    <string name="share">Share</string>
    <string name="link_open">Open Link</string>
    <string name="link_share">Share Link</string>
    <string name="link_copy">Copy Link</string>
    <string name="back">BACK</string>
    <string name="reload">RELOAD</string>
    <string name="forward">FORWARD</string>
    <string name="loadhomepage">LOAD HOMEPAGE</string>
    <string name="desktopmodeon">DESKTOPMODE ON</string>
    <string name="desktopmodeoff">DESKTOPMODE OFF</string>
    <string name="finish">FINISH?</string>
    <string name="loading">Loading...</string>
    <string name="downloaded">Downloaded File</string>
    <string name="fileopen">Open File</string>
    <string name="permissionfordownload">Get permission for just download</string>
    <string name="permissionforlocation">Get permission for just access location</string>
    <string name="skinselected">Skin was selected</string>
    <string name="errorloadpage">Error to load page, want to go homepage?</string>
    <string name="problemdownload">Problem to Download file</string>
    <string name="problemlocation">Problem to Access loaction</string>
    <string name="img_share">Share Image</string>
    <string name="ssltitle">SSL Error, will you access? "We don\'t recommended"</string>
    <string name="link_save">Save Link</string>
    <string name="iconblackchecktext">Want to icons Black?</string>
    <string name="iconblackchecktitle">Black or White</string>
    <string name="btn_black">BLACK</string>
    <string name="btn_white">WHITE</string>
    <string name="errorsettheme">Error to set skin</string>
    <string name="connectlink">Connecting link from other apps</string>
    <string name="themesettitle">Set Skin</string>
    <string name="themesettxt">Want to set</string>
    <string name="setting_title_1">Set Internet Browsing</string>
    <string name="setting_1_1">Set homepage URL</string>
    <string name="setting_1_2">Set your homepage URL what you want</string>
    <string name="setting_1_3">Select Search Engine</string>
    <string name="setting_1_4">Set yout Search engine what you want</string>
    <string name="setting_1_5">Changeable Statusbar (TESTING)</string>
    <string name="setting_1_6">Ignore themecolor and set top color of website to status color (LOLIPOP)</string>
    <string name="array_setse_1">NAVER</string>
    <string name="array_setse_2">GOOGLE</string>
    <string name="array_setse_3">DAUM (KAKAO)</string>
    <string name="array_setse_4">BING</string>
    <string name="recommendout">We do not recommend to access this website, please get out of here</string>
    <string name="setting_1_7">SSL Error check</string>
    <string name="setting_1_8">If website has ssl secure error, you will access? (Never recommended)</string>
    <string name="ssltitle2">SSL Error, you can go back</string>
    <string name="setting_2_1">FullScreen Mode</string>
    <string name="setting_2_2">Hide statusbar and navigtion bar</string>
    <string name="setting_title_2">Easy using setting</string>
    <string name="setting_2_3">Icon color black</string>
    <string name="setting_2_4">Set icon as black</string>
    <string name="title_activity_web">WebActivity</string>

</resources>
